fix formInputRaw not showing values (#2714)
* add e2e utilities to check forms for values
add (very basic) unit test to test formInputRaw
fix issue with the FormInputRaw not showing values
fix css to show placeholder in gray and disabled input vaules in dark gray

* fix acceptSinglePayout e2e test

--- a/app/components/shared/forms/fields/FormStyles.module.scss
+++ b/app/components/shared/forms/fields/FormStyles.module.scss
@@ -51,10 +51,10 @@
 
 .input-field {
   &:disabled {
-    color: $neu-silver;
+    color: $neu-slate-grey;
 
     &::placeholder {
-      color: $color-black;
+      color: $neu-silver;
     }
   }
 }
